// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Binary env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary): version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_BINARY):  Use supplied binary: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_BINARY):  Use supplied binary: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_BINARY):  Use supplied binary: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_BINARY):  Use supplied binary: version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_LIBRARY): uses default binary (and ignores env var): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_LIBRARY): uses default binary (and ignores env var): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_LIBRARY): uses default binary (and ignores env var): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Binary schema(engineType=binary) env(PRISMA_QUERY_ENGINE_LIBRARY): uses default binary (and ignores env var): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Binary schema(engineType=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Binary schema(engineType=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Binary schema(engineType=binary): ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Binary schema(engineType=binary): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;
